SIS/force-app/main/default/objects/Account/fields/Household_ID__c.field-meta.xml
<CustomField>
    <fullName>Household_ID__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Primary_Account__c )),
    CASESAFEID( Primary_Account__c ),
    CASESAFEID( Id )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household ID</label>
    <type>Text</type>
</CustomField>