SIS/force-app/main/default/objects/Account/fields/Parent_Contact_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_Telephone__c</fullName>
    <label>Parent Contact Telephone</label>
    <type>Phone</type>
</CustomField>