SIS/force-app/main/default/objects/Account/fields/Parent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Email_Address__c</fullName>
    <label>Parent Email Address</label>
    <type>Email</type>
</CustomField>