SIS/force-app/main/default/objects/Account/fields/Parent_NRIC_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_NRIC_Passport_No__c</fullName>
    <label>Parent NRIC/Passport No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>