SIS/force-app/main/default/objects/Account/fields/Parent_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Occupation__c</fullName>
    <label>Parent Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>