SIS/force-app/main/default/objects/Account/fields/Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parent Accounts</relationshipLabel>
    <relationshipName>PrimaryAccount</relationshipName>
    <type>Lookup</type>
</CustomField>