SIS/force-app/main/default/objects/Account/recordTypes/Campus_ID.recordType-meta.xml
<RecordType>
    <fullName>Campus_ID</fullName>
    <active>true</active>
    <label>Campus ID</label>
</RecordType>