SIS/force-app/main/default/objects/Account/validationRules/SIS_Postcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Postcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Postcode__c)),  
    NOT(REGEX(Postcode__c, &quot;^[0-9]+$&quot;))  
)</errorConditionFormula>
    <errorDisplayField>Postcode__c</errorDisplayField>
    <errorMessage>Postcode should only contain numbers.</errorMessage>
</ValidationRule>