SIS/force-app/main/default/objects/Account/validationRules/SIS_Validate_Contact_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Validate_Contact_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Phone )),
  NOT(REGEX( Phone , &quot;^\\+?[0-9]{10,12}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter a valid number with 10 to 12 digits.</errorMessage>
</ValidationRule>