SIS/force-app/main/default/objects/Account/listViews/All_Campus.listView-meta.xml
<ListView>
    <fullName>All_Campus</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Campus_ID</value>
    </filters>
    <label>All Campus</label>
</ListView>