SIS/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parent_NRIC_Passport_No__c</columns>
    <columns>Parent_Email_Address__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Account.Campus_ID</value>
    </filters>
    <label>All Parent Accounts</label>
</ListView>